--- a/css/responsive.css
+++ b/css/responsive.css
@@ -232,10 +232,6 @@
         margin-bottom: 0;
     }
 
-    .diamond {
-        /*        margin: 10px 0 22px 0;*/
-    }
-
     #video-section .video-p {
         margin: 25px 25px 0 25px;
     }
@@ -257,14 +253,17 @@
         -moz-transform: translateY(210px);
         transform: translateY(205px);
     }
-
+    
+    #video-section .modal.show .modal-dialog {
+        transform: translateY(47%);
+    }
+    
     #video-section .modal-body {
-        padding: 0 8rem;
+        padding: 0 3rem;
     }
 
     #video-section .modal-header {
-        padding: 1rem 8rem;
-        margin-top: 25%;
+        padding: 2rem 3rem;
     }
 
     .testimo-quote {
@@ -825,20 +824,12 @@
     }
 
     #video-section .modal-header {
-        padding: 0 0 15px 0;
-        width: 35%;
-    }
-
-    #video-section .modal-body video {
-        width: 36%;
+        padding-right: 15px;
+        padding-bottom: 10px;
     }
 
     #video-section .modal.show .modal-dialog {
-        transform: translate(1%, 118%);
-    }
-
-    .modal-body {
-        padding: 0 32px 0 5px;
+        transform: translateY(66%);
     }
 
     .testimo-img img {
@@ -1372,21 +1363,16 @@
     }
 
     #video-section .modal-header {
-        padding: 0 0 15px 0;
-        width: 50.8%;
+        padding: 0 15px 10px 0;
+        width: 100%;
     }
 
     #video-section .modal-body video {
-        width: 52%;
+        width: 100%;
     }
 
     #video-section .modal.show .modal-dialog {
-        -webkit-transform: translate(0, 0);
-        transform: translate(1%, 125%);
-    }
-
-    .modal-body {
-        padding: 0 32px 0 5px;
+        transform: translateY(72%);
     }
 
     .testimo-img img {
